# Automake Settings
# Copyright (C) 2007-2014 kaoru
# $Id$

pkg_headers = \
    gui/alert.h \
    gui/common_dialog/color.h \
    gui/common_dialog/file_open.h \
    gui/common_dialog/file_save.h \
    gui/common_dialog/font.h \
    gui/common_dialog/message_box.h \
    gui/cursor/cursor_base.h \
    gui/cursor/system.h \
    gui/drawing/background.h \
    gui/drawing/canvas.h \
    gui/drawing/canvas_traits.h \
    gui/drawing/color.h \
    gui/drawing/font.h \
    gui/drawing/picture.h \
    gui/drawing/picture_reader.h \
    gui/drawing/solid_background.h \
    gui/drawing/system_color_set.h \
    gui/drawing/transparent_background.h \
    gui/drawing/widget_canvas.h \
    gui/fixture.h \
    gui/icon.h \
    gui/measure.h \
    gui/menu/abstract_popup.h \
    gui/menu/command.h \
    gui/menu/menu_bar.h \
    gui/menu/menu_base.h \
    gui/menu/popup.h \
    gui/menu/recursive_iterator.h \
    gui/menu/separator.h \
    gui/menu/shortcut_key.h \
    gui/menu/shortcut_key_table.h \
    gui/menu/traits.h \
    gui/message/dialog_message_loop.h \
    gui/message/file_drop_observer_set.h \
    gui/message/focus_observer_set.h \
    gui/message/keyboard_observer_set.h \
    gui/message/list_selection_observer_set.h \
    gui/message/menu_observer_set.h \
    gui/message/message_loop.h \
    gui/message/message_loop_break.h \
    gui/message/mouse_observer_set.h \
    gui/message/paint_observer_set.h \
    gui/message/scroll_bar_observer_set.h \
    gui/message/size_observer_set.h \
    gui/message/text_box_observer_set.h \
    gui/message/window_observer_set.h \
    gui/mouse_capture.h \
    gui/scroll_bar.h \
    gui/shell.h \
    gui/timer.h \
    gui/unit/em.h \
    gui/unit/pixel.h \
    gui/unit/point.h \
    gui/unit/unit.h \
    gui/virtual_key.h \
    gui/widget/abstract_window.h \
    gui/widget/button.h \
    gui/widget/control.h \
    gui/widget/custom_control.h \
    gui/widget/dialog.h \
    gui/widget/dropdown_box.h \
    gui/widget/image.h \
    gui/widget/label.h \
    gui/widget/link_label.h \
    gui/widget/list_box.h \
    gui/widget/map_box.h \
    gui/widget/picture_box.h \
    gui/widget/side_bar.h \
    gui/widget/text_box.h \
    gui/widget/traits/abstract_window_traits.h \
    gui/widget/traits/button_traits.h \
    gui/widget/traits/control_traits.h \
    gui/widget/traits/custom_control_traits.h \
    gui/widget/traits/dialog_traits.h \
    gui/widget/traits/dropdown_box_traits.h \
    gui/widget/traits/image_traits.h \
    gui/widget/traits/label_traits.h \
    gui/widget/traits/link_label_traits.h \
    gui/widget/traits/list_box_traits.h \
    gui/widget/traits/map_box_traits.h \
    gui/widget/traits/picture_box_traits.h \
    gui/widget/traits/side_bar_traits.h \
    gui/widget/traits/text_box_traits.h \
    gui/widget/traits/widget_traits.h \
    gui/widget/traits/window_traits.h \
    gui/widget/widget.h \
    gui/widget/window.h

extra_headers = \
    gui/0namespace.h \
    gui/common_dialog/0namespace.h \
    gui/cursor/0namespace.h \
    gui/drawing/0namespace.h \
    gui/menu/0namespace.h \
    gui/message/0namespace.h \
    gui/unit/0namespace.h \
    gui/widget/0namespace.h \
    gui/widget/traits/0namespace.h

nobase_pkginclude_HEADERS = $(pkg_headers)
EXTRA_DIST = $(extra_headers)
